** KPILOT CHANGELOG **
======================

2004-09-18  Adriaan de Groot & Reinhold Kainhofer
* Deprecated a bunch of poorly-named functions in lib/, and
  moved everything to the new names. Finally, no more getCat(),
  but just category().
* Detect special case of bad resource headers in file installer.

2004-08-16  Adriaan de Groot
* Was away at a summer school for two weeks. Got no KPilot stuff
  done except an off-by-one bug in the memo stuff.
* Split the CopyHHtoPC code out in the knotes conduit,
  ready for QThreading (maybe).

2004-07-27  Adriaan de Groot
* MAL conduit proxy password not loaded properly. Reported by
  Olivier D.
* Clean out ancient cruft in fileInstaller.{h,cc}. Run file installer
  twice, to allow conduits to create files to install. Determine
  list of files at ::exec() time, not at object creation time.
* Added some docs to the conduit configure.in.in.
* Give PERL conduit more information to work with.

2004-07-19  Adriaan de Groot
* In kontact, if the daemon gets started it shouldn't complain loudly
  about messed-up configurations.

2004-07-14  Adriaan de Groot
* Joyeux quatorze juillet! Spent most of the past week totally ignoring
  KPilot, working on personal websites, KDE-FreeBSD, and porting
  k3b to FreeBSD (breaking it on Linux only briefly).

2004-06-29  Reinhold Kainhofer
* Fix the bug that todos that were marked finished on the handheld
  lost that state when synced to the PC.
* A few layout adjustments for the perl/python conduits (QTextEdit
  instead of QLineEdit)

2004-06-29  Joern Ahrens
* Corrected the behavior of the configuration dialog, when the
  screensaver option is changed.
* Moved the tickle code from InteractiveAction to SyncAction.
  Now it can be used in ConduitAction subclasses as well.
* Ahh, got Adriaans m100, now I'm able to test without destroying
  my data on the palm. Thanks Adriaan !

2004-06-27  Joern Ahrens
* Filled the notepad conduit with life. The notepads are saved as png